# pydantic-ai-cursor-starter-kit

./: .cursorrules  README.md  docker-compose.yml
docs/: Function_Tools.md  Graphs.md  Multi_agent_Applications.md  Structured_Result_Validation.md
docs/lang-graph/: Application_Structure_.md  Deployment_Options_.md  How_to_do_a_Self_hosted_deployment_of_LangGraph_.md  How_to_visualize_your_graph_.md  LangGraph_Glossary_.md  LangGraph_Platform_.md  LangGraph_Platform_Plans_.md  LangGraph_Server_.md  Streaming_.md  _LangGraph_Quickstart_.md
docs/pydantic-ai/: Agents.md  Dependencies.md  Messages_and_chat_history.md  Models.md  Testing_and_Evals.md  pydantic-ai-docs.md
example-agent/: README.md  langgraph.json  pyproject.toml
example-agent/src/: agent.py
examples/: bank_support.py  chat_app_with_fastapi.py  multi_agent_flow_flight_booking.py  pydantic_model.py  rag.py  sql_generation.py  stream_markdown.py  stream_structured_objects.py  weather_agent.py
weather-agent/: .example.env  pyproject.toml
weather-agent/src/: agent.py  settings.py
